fix z-index

--- a/components/hero/index.module.css
+++ b/components/hero/index.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     position: relative;
-    z-index: 1;
+    z-index: -1;
     justify-content: center;
     align-items: center;
     color: var(--color-text-unpainted);
